- Added Chinese localization made by CoolLKK 
- Added the ability to disable the waypoint modifications
- Fixed the width of objectives sometimes being incorrect
- Fixed a crash related to the loading screens and the BeardLib-Editor
- Fixed the stored health meter for ex-president not working correctly
- Fixed hint notifications sometimes coloring wrong parts of the text

Version 1.1.2 (2017.12.19)
- Added loading screens
- Added tagging notifications for the Tag Team perk-deck
- Added hud effects for the Tag Team perk-deck
- Added the ability for custom hint notifications to use the color names feature
- Added interaction complete animation to name labels
- Added the option to disable the exp bar on the stats screen when you are at max level
- Scoreboard panels will now show the equipped armor of bots if they have them via other mods
- Made hint notifications color bot names as well
- Made the loading screen and stats screen show the days of Reservoir Dogs Heist correctly.
- Made the heist intro, statscreen and timer panel show the variations of the bank heist
- Updated the heist intro screen and added options for it
- Updated the teammate carry text to support cyrillic characters
- Fixed scoreboard panels getting reset when their owner is released from custody
- Fixed a crash related to teammates using custom perk-decks
- Fixed damage reduction bars sometimes not being updated correctly
- Fixed names on hint notifications not being colored if the player has a bracket in their name
- Fixed the ability bar not showing the current amount when using the Tag Team perk-deck
- Fixed the interaction complete animation not being scaled correctly
- Fixed the interaction bar length issue when interacting with bugged objects in The Golden Grin Casino
- Fixed crash related to the secured loot panel and the BeardLib-Editor
- Fixed the throwable indicator sometimes showing wrong values for ability perk-decks