@@ -65,10 +65,11 @@
 			"title" : "VoidUI_joining_mods_scale_title",
 			"description" : "VoidUI_joining_mods_scale_desc",
 			"parent" : ["enable_joining", "joining_mods"],
+			"percentage" : true,
 			"default_value" : 0.9,
 			"max" : 2,
 			"min" : 0.65,
-			"step" : 1
+			"step" : 2
 		},
 		{
 			"type" : "toggle",
